#150902 - Spaces in path have to be escaped to get valid URL.